server/compilers/goLiteJS/src/test/ml1/invalid/func9.go
// missing parentheses
package main

func f {
    return
}
